Dropped duplicate store/item columns

--- a/acquire.ipynb
+++ b/acquire.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c8321898",
+   "id": "0701547d",
    "metadata": {},
    "source": [
     "# Time Series Data Acquisition Exercises\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8fe22b4a",
+   "id": "40384545",
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e207e3be",
+   "id": "fa881333",
    "metadata": {},
    "outputs": [
     {
@@ -912,7 +912,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f0d05914",
+   "id": "eb0a692a",
    "metadata": {},
    "outputs": [
     {
@@ -1675,7 +1675,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "18d8b873",
+   "id": "c46a0c2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1703,7 +1703,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "00ad22ea",
+   "id": "99b54d9c",
    "metadata": {},
    "outputs": [
     {
@@ -2462,7 +2462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c63ef7d6",
+   "id": "79177d4a",
    "metadata": {},
    "source": [
     "### 2. Do the same thing, but for `stores` (https://python.zgulde.net/api/v1/stores)"
@@ -2471,7 +2471,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9f7ea213",
+   "id": "727017c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2499,7 +2499,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4af3c69d",
+   "id": "3adc5c3e",
    "metadata": {},
    "outputs": [
     {
@@ -2642,7 +2642,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "608708ef",
+   "id": "9a483a4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2670,7 +2670,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "1ae192a5",
+   "id": "a4006ce3",
    "metadata": {},
    "outputs": [
     {
@@ -2813,7 +2813,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c01e7609",
+   "id": "68e1ce28",
    "metadata": {},
    "source": [
     "### 3. Extract the data for `sales` (https://python.zgulde.net/api/v1/sales). There are a lot of pages of data here, so your code will need to be a little more complex. Your code should continue fetching data from the next page until all of the data is extracted."
@@ -2822,7 +2822,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5ce9e877",
+   "id": "824b142a",
    "metadata": {},
    "outputs": [
     {
@@ -2977,7 +2977,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6396cccd",
+   "id": "5394830d",
    "metadata": {},
    "source": [
     "### 4. Save the data in your files to local csv files so that it will be faster to access in the future."
@@ -2986,7 +2986,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "656f27fa",
+   "id": "2e8d3b51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3026,7 +3026,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "3a57b7b4",
+   "id": "69becd65",
    "metadata": {},
    "outputs": [
     {
@@ -3170,7 +3170,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "71de2812",
+   "id": "ec9cb4d4",
    "metadata": {},
    "outputs": [
     {
@@ -3829,7 +3829,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "16e2b28c",
+   "id": "f24ba49f",
    "metadata": {},
    "outputs": [
     {
@@ -3984,7 +3984,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7544961b",
+   "id": "afe201fa",
    "metadata": {},
    "source": [
     "### 5. Combine the data from your three separate dataframes into one large dataframe."
@@ -3993,7 +3993,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c907ff6e",
+   "id": "5b2dc691",
    "metadata": {},
    "outputs": [
     {
@@ -4331,8 +4331,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "7f161145",
+   "execution_count": 8,
+   "id": "2873dfa2",
    "metadata": {},
    "outputs": [
     {
@@ -4356,11 +4356,9 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>item</th>\n",
        "      <th>sale_amount</th>\n",
        "      <th>sale_date</th>\n",
        "      <th>sale_id</th>\n",
-       "      <th>store</th>\n",
        "      <th>store_address</th>\n",
        "      <th>store_city</th>\n",
        "      <th>store_id</th>\n",
@@ -4377,10 +4375,8 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
        "      <td>13.0</td>\n",
        "      <td>Tue, 01 Jan 2013 00:00:00 GMT</td>\n",
-       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>12125 Alamo Ranch Pkwy</td>\n",
        "      <td>San Antonio</td>\n",
@@ -4396,11 +4392,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>11.0</td>\n",
        "      <td>Wed, 02 Jan 2013 00:00:00 GMT</td>\n",
        "      <td>2</td>\n",
-       "      <td>1</td>\n",
        "      <td>12125 Alamo Ranch Pkwy</td>\n",
        "      <td>San Antonio</td>\n",
        "      <td>1</td>\n",
@@ -4415,11 +4409,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1</td>\n",
        "      <td>14.0</td>\n",
        "      <td>Thu, 03 Jan 2013 00:00:00 GMT</td>\n",
        "      <td>3</td>\n",
-       "      <td>1</td>\n",
        "      <td>12125 Alamo Ranch Pkwy</td>\n",
        "      <td>San Antonio</td>\n",
        "      <td>1</td>\n",
@@ -4434,11 +4426,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1</td>\n",
        "      <td>13.0</td>\n",
        "      <td>Fri, 04 Jan 2013 00:00:00 GMT</td>\n",
        "      <td>4</td>\n",
-       "      <td>1</td>\n",
        "      <td>12125 Alamo Ranch Pkwy</td>\n",
        "      <td>San Antonio</td>\n",
        "      <td>1</td>\n",
@@ -4453,11 +4443,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1</td>\n",
        "      <td>10.0</td>\n",
        "      <td>Sat, 05 Jan 2013 00:00:00 GMT</td>\n",
        "      <td>5</td>\n",
-       "      <td>1</td>\n",
        "      <td>12125 Alamo Ranch Pkwy</td>\n",
        "      <td>San Antonio</td>\n",
        "      <td>1</td>\n",
@@ -4486,16 +4474,12 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>912995</th>\n",
-       "      <td>50</td>\n",
        "      <td>63.0</td>\n",
        "      <td>Wed, 27 Dec 2017 00:00:00 GMT</td>\n",
        "      <td>912996</td>\n",
-       "      <td>10</td>\n",
        "      <td>8503 NW Military Hwy</td>\n",
        "      <td>San Antonio</td>\n",
        "      <td>10</td>\n",
@@ -4510,11 +4494,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>912996</th>\n",
-       "      <td>50</td>\n",
        "      <td>59.0</td>\n",
        "      <td>Thu, 28 Dec 2017 00:00:00 GMT</td>\n",
        "      <td>912997</td>\n",
-       "      <td>10</td>\n",
        "      <td>8503 NW Military Hwy</td>\n",
        "      <td>San Antonio</td>\n",
        "      <td>10</td>\n",
@@ -4529,11 +4511,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>912997</th>\n",
-       "      <td>50</td>\n",
        "      <td>74.0</td>\n",
        "      <td>Fri, 29 Dec 2017 00:00:00 GMT</td>\n",
        "      <td>912998</td>\n",
-       "      <td>10</td>\n",
        "      <td>8503 NW Military Hwy</td>\n",
        "      <td>San Antonio</td>\n",
        "      <td>10</td>\n",
@@ -4548,11 +4528,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>912998</th>\n",
-       "      <td>50</td>\n",
        "      <td>62.0</td>\n",
        "      <td>Sat, 30 Dec 2017 00:00:00 GMT</td>\n",
        "      <td>912999</td>\n",
-       "      <td>10</td>\n",
        "      <td>8503 NW Military Hwy</td>\n",
        "      <td>San Antonio</td>\n",
        "      <td>10</td>\n",
@@ -4567,11 +4545,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>912999</th>\n",
-       "      <td>50</td>\n",
        "      <td>82.0</td>\n",
        "      <td>Sun, 31 Dec 2017 00:00:00 GMT</td>\n",
        "      <td>913000</td>\n",
-       "      <td>10</td>\n",
        "      <td>8503 NW Military Hwy</td>\n",
        "      <td>San Antonio</td>\n",
        "      <td>10</td>\n",
@@ -4586,22 +4562,22 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>913000 rows × 16 columns</p>\n",
+       "<p>913000 rows × 14 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        item  sale_amount                      sale_date  sale_id  store  \\\n",
-       "0          1         13.0  Tue, 01 Jan 2013 00:00:00 GMT        1      1   \n",
-       "1          1         11.0  Wed, 02 Jan 2013 00:00:00 GMT        2      1   \n",
-       "2          1         14.0  Thu, 03 Jan 2013 00:00:00 GMT        3      1   \n",
-       "3          1         13.0  Fri, 04 Jan 2013 00:00:00 GMT        4      1   \n",
-       "4          1         10.0  Sat, 05 Jan 2013 00:00:00 GMT        5      1   \n",
-       "...      ...          ...                            ...      ...    ...   \n",
-       "912995    50         63.0  Wed, 27 Dec 2017 00:00:00 GMT   912996     10   \n",
-       "912996    50         59.0  Thu, 28 Dec 2017 00:00:00 GMT   912997     10   \n",
-       "912997    50         74.0  Fri, 29 Dec 2017 00:00:00 GMT   912998     10   \n",
-       "912998    50         62.0  Sat, 30 Dec 2017 00:00:00 GMT   912999     10   \n",
-       "912999    50         82.0  Sun, 31 Dec 2017 00:00:00 GMT   913000     10   \n",
+       "        sale_amount                      sale_date  sale_id  \\\n",
+       "0              13.0  Tue, 01 Jan 2013 00:00:00 GMT        1   \n",
+       "1              11.0  Wed, 02 Jan 2013 00:00:00 GMT        2   \n",
+       "2              14.0  Thu, 03 Jan 2013 00:00:00 GMT        3   \n",
+       "3              13.0  Fri, 04 Jan 2013 00:00:00 GMT        4   \n",
+       "4              10.0  Sat, 05 Jan 2013 00:00:00 GMT        5   \n",
+       "...             ...                            ...      ...   \n",
+       "912995         63.0  Wed, 27 Dec 2017 00:00:00 GMT   912996   \n",
+       "912996         59.0  Thu, 28 Dec 2017 00:00:00 GMT   912997   \n",
+       "912997         74.0  Fri, 29 Dec 2017 00:00:00 GMT   912998   \n",
+       "912998         62.0  Sat, 30 Dec 2017 00:00:00 GMT   912999   \n",
+       "912999         82.0  Sun, 31 Dec 2017 00:00:00 GMT   913000   \n",
        "\n",
        "                 store_address   store_city  store_id store_state  \\\n",
        "0       12125 Alamo Ranch Pkwy  San Antonio         1          TX   \n",
@@ -4655,10 +4631,10 @@
        "912998  47445919221  47445919221  \n",
        "912999  47445919221  47445919221  \n",
        "\n",
-       "[913000 rows x 16 columns]"
+       "[913000 rows x 14 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4671,14 +4647,14 @@
     "    single dataframe.\n",
     "    '''\n",
     "    df = sales.merge(stores, left_on='store', right_on='store_id').merge(items, left_on='item', right_on='item_id')\n",
-    "    return df\n",
+    "    return df.drop(columns=['store', 'item'])\n",
     "# test function\n",
     "merge_dfs(sales, stores, items)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7bad691a",
+   "id": "cfba81ca",
    "metadata": {},
    "source": [
     "### 6. Acquire the Open Power Systems Data for Germany, which has been rapidly expanding its renewable energy production in recent years. The data set includes country-wide totals of electricity consumption, wind power production, and solar power production for 2006-2017. You can get the data here: https://raw.githubusercontent.com/jenfly/opsd/master/opsd_germany_daily.csv"
@@ -4687,7 +4663,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "055d370a",
+   "id": "84d46f42",
    "metadata": {},
    "outputs": [
     {
@@ -4842,7 +4818,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "f9ac8a7b",
+   "id": "0f9749de",
    "metadata": {},
    "outputs": [
     {
@@ -5013,7 +4989,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "683312e8",
+   "id": "1beca3df",
    "metadata": {},
    "source": [
     "### 7. Make sure all the work that you have done above is reproducible. That is, you should put the code above into separate functions in the `acquire.py` file and be able to re-run the functions and get the same data."
@@ -5022,7 +4998,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ad06b68e",
+   "id": "eb5a4c21",
    "metadata": {},
    "outputs": [
     {
@@ -5136,7 +5112,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1467e8ec",
+   "id": "9fe1ca3a",
    "metadata": {},
    "outputs": [
     {
@@ -5234,7 +5210,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "375b295a",
+   "id": "c2cec34f",
    "metadata": {},
    "outputs": [
     {
@@ -5332,7 +5308,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8074b3c7",
+   "id": "11d2a24a",
    "metadata": {},
    "outputs": [
     {
@@ -5356,11 +5332,9 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>item</th>\n",
        "      <th>sale_amount</th>\n",
        "      <th>sale_date</th>\n",
        "      <th>sale_id</th>\n",
-       "      <th>store</th>\n",
        "      <th>store_address</th>\n",
        "      <th>store_city</th>\n",
        "      <th>store_id</th>\n",
@@ -5377,10 +5351,8 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
        "      <td>13.0</td>\n",
        "      <td>Tue, 01 Jan 2013 00:00:00 GMT</td>\n",
-       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>12125 Alamo Ranch Pkwy</td>\n",
        "      <td>San Antonio</td>\n",
@@ -5396,11 +5368,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>11.0</td>\n",
        "      <td>Wed, 02 Jan 2013 00:00:00 GMT</td>\n",
        "      <td>2</td>\n",
-       "      <td>1</td>\n",
        "      <td>12125 Alamo Ranch Pkwy</td>\n",
        "      <td>San Antonio</td>\n",
        "      <td>1</td>\n",
@@ -5415,11 +5385,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1</td>\n",
        "      <td>14.0</td>\n",
        "      <td>Thu, 03 Jan 2013 00:00:00 GMT</td>\n",
        "      <td>3</td>\n",
-       "      <td>1</td>\n",
        "      <td>12125 Alamo Ranch Pkwy</td>\n",
        "      <td>San Antonio</td>\n",
        "      <td>1</td>\n",
@@ -5434,11 +5402,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1</td>\n",
        "      <td>13.0</td>\n",
        "      <td>Fri, 04 Jan 2013 00:00:00 GMT</td>\n",
        "      <td>4</td>\n",
-       "      <td>1</td>\n",
        "      <td>12125 Alamo Ranch Pkwy</td>\n",
        "      <td>San Antonio</td>\n",
        "      <td>1</td>\n",
@@ -5453,11 +5419,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1</td>\n",
        "      <td>10.0</td>\n",
        "      <td>Sat, 05 Jan 2013 00:00:00 GMT</td>\n",
        "      <td>5</td>\n",
-       "      <td>1</td>\n",
        "      <td>12125 Alamo Ranch Pkwy</td>\n",
        "      <td>San Antonio</td>\n",
        "      <td>1</td>\n",
@@ -5475,12 +5439,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   item  sale_amount                      sale_date  sale_id  store  \\\n",
-       "0     1         13.0  Tue, 01 Jan 2013 00:00:00 GMT        1      1   \n",
-       "1     1         11.0  Wed, 02 Jan 2013 00:00:00 GMT        2      1   \n",
-       "2     1         14.0  Thu, 03 Jan 2013 00:00:00 GMT        3      1   \n",
-       "3     1         13.0  Fri, 04 Jan 2013 00:00:00 GMT        4      1   \n",
-       "4     1         10.0  Sat, 05 Jan 2013 00:00:00 GMT        5      1   \n",
+       "   sale_amount                      sale_date  sale_id  \\\n",
+       "0         13.0  Tue, 01 Jan 2013 00:00:00 GMT        1   \n",
+       "1         11.0  Wed, 02 Jan 2013 00:00:00 GMT        2   \n",
+       "2         14.0  Thu, 03 Jan 2013 00:00:00 GMT        3   \n",
+       "3         13.0  Fri, 04 Jan 2013 00:00:00 GMT        4   \n",
+       "4         10.0  Sat, 05 Jan 2013 00:00:00 GMT        5   \n",
        "\n",
        "            store_address   store_city  store_id store_state  store_zipcode  \\\n",
        "0  12125 Alamo Ranch Pkwy  San Antonio         1          TX          78253   \n",
@@ -5517,7 +5481,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7329c38e",
+   "id": "cc7f2acb",
    "metadata": {},
    "outputs": [
     {
@@ -5615,7 +5579,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43cc1a64",
+   "id": "f267eeae",
    "metadata": {},
    "outputs": [],
    "source": []
