Removed initial get_data function

--- a/acquire.ipynb
+++ b/acquire.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0701547d",
+   "id": "20d5118f",
    "metadata": {},
    "source": [
     "# Time Series Data Acquisition Exercises\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "40384545",
+   "id": "3f8ccb72",
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fa881333",
+   "id": "751219db",
    "metadata": {},
    "outputs": [
     {
@@ -912,7 +912,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "eb0a692a",
+   "id": "e3f515d4",
    "metadata": {},
    "outputs": [
     {
@@ -1675,7 +1675,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c46a0c2a",
+   "id": "75c2f388",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1703,7 +1703,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "99b54d9c",
+   "id": "75a2dbd8",
    "metadata": {},
    "outputs": [
     {
@@ -2462,7 +2462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79177d4a",
+   "id": "b4c19b32",
    "metadata": {},
    "source": [
     "### 2. Do the same thing, but for `stores` (https://python.zgulde.net/api/v1/stores)"
@@ -2471,7 +2471,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "727017c5",
+   "id": "dc244b2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2499,7 +2499,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3adc5c3e",
+   "id": "d79a9fcc",
    "metadata": {},
    "outputs": [
     {
@@ -2642,7 +2642,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9a483a4b",
+   "id": "9f85f5af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2670,7 +2670,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a4006ce3",
+   "id": "9b8da744",
    "metadata": {},
    "outputs": [
     {
@@ -2813,7 +2813,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68e1ce28",
+   "id": "beaad7fa",
    "metadata": {},
    "source": [
     "### 3. Extract the data for `sales` (https://python.zgulde.net/api/v1/sales). There are a lot of pages of data here, so your code will need to be a little more complex. Your code should continue fetching data from the next page until all of the data is extracted."
@@ -2822,7 +2822,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "824b142a",
+   "id": "1d1f643e",
    "metadata": {},
    "outputs": [
     {
@@ -2977,7 +2977,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5394830d",
+   "id": "23963041",
    "metadata": {},
    "source": [
     "### 4. Save the data in your files to local csv files so that it will be faster to access in the future."
@@ -2986,12 +2986,12 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "2e8d3b51",
+   "id": "f7437ed3",
    "metadata": {},
    "outputs": [],
    "source": [
     "# add code to write df to csv\n",
-    "def get_data_csv(target):\n",
+    "def get_data(target):\n",
     "    '''\n",
     "    This function takes in a target specifying which dataset to retrieve from \n",
     "    https://python.zgulde.net/ It returns a dataframe of that data and creates a\n",
@@ -3026,7 +3026,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "69becd65",
+   "id": "f9ed6570",
    "metadata": {},
    "outputs": [
     {
@@ -3163,14 +3163,14 @@
    ],
    "source": [
     "# test function, get csv for stores\n",
-    "stores = get_data_csv('stores')\n",
+    "stores = get_data('stores')\n",
     "stores"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ec9cb4d4",
+   "id": "0159e53e",
    "metadata": {},
    "outputs": [
     {
@@ -3822,14 +3822,14 @@
    ],
    "source": [
     "# get csv for items\n",
-    "items = get_data_csv('items')\n",
+    "items = get_data('items')\n",
     "items"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "f24ba49f",
+   "id": "dad8b929",
    "metadata": {},
    "outputs": [
     {
@@ -3978,13 +3978,13 @@
    ],
    "source": [
     "# get csv for sales\n",
-    "sales = get_data_csv('sales')\n",
+    "sales = get_data('sales')\n",
     "sales"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "afe201fa",
+   "id": "9b89d9f2",
    "metadata": {},
    "source": [
     "### 5. Combine the data from your three separate dataframes into one large dataframe."
@@ -3993,7 +3993,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "5b2dc691",
+   "id": "2fd55380",
    "metadata": {},
    "outputs": [
     {
@@ -4332,7 +4332,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2873dfa2",
+   "id": "4ba3b15e",
    "metadata": {},
    "outputs": [
     {
@@ -4654,7 +4654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfba81ca",
+   "id": "2b999a32",
    "metadata": {},
    "source": [
     "### 6. Acquire the Open Power Systems Data for Germany, which has been rapidly expanding its renewable energy production in recent years. The data set includes country-wide totals of electricity consumption, wind power production, and solar power production for 2006-2017. You can get the data here: https://raw.githubusercontent.com/jenfly/opsd/master/opsd_germany_daily.csv"
@@ -4663,7 +4663,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "84d46f42",
+   "id": "6ecd571b",
    "metadata": {},
    "outputs": [
     {
@@ -4818,7 +4818,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "0f9749de",
+   "id": "a9cc73b0",
    "metadata": {},
    "outputs": [
     {
@@ -4989,7 +4989,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1beca3df",
+   "id": "8cdfb788",
    "metadata": {},
    "source": [
     "### 7. Make sure all the work that you have done above is reproducible. That is, you should put the code above into separate functions in the `acquire.py` file and be able to re-run the functions and get the same data."
@@ -4998,7 +4998,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "eb5a4c21",
+   "id": "0591215a",
    "metadata": {},
    "outputs": [
     {
@@ -5105,14 +5105,14 @@
     "# test acquire.py functions\n",
     "import acquire as a\n",
     "\n",
-    "items = a.get_data_csv('items')\n",
+    "items = a.get_data('items')\n",
     "items.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9fe1ca3a",
+   "id": "c353b4b1",
    "metadata": {},
    "outputs": [
     {
@@ -5203,14 +5203,14 @@
     }
    ],
    "source": [
-    "stores = a.get_data_csv('stores')\n",
+    "stores = a.get_data('stores')\n",
     "stores.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c2cec34f",
+   "id": "ed3ebcac",
    "metadata": {},
    "outputs": [
     {
@@ -5301,14 +5301,14 @@
     }
    ],
    "source": [
-    "sales = a.get_data_csv('sales')\n",
+    "sales = a.get_data('sales')\n",
     "sales.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "11d2a24a",
+   "id": "d7dc33ce",
    "metadata": {},
    "outputs": [
     {
@@ -5481,7 +5481,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "cc7f2acb",
+   "id": "20f3cd6a",
    "metadata": {},
    "outputs": [
     {
@@ -5579,7 +5579,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f267eeae",
+   "id": "fe4944e4",
    "metadata": {},
    "outputs": [],
    "source": []
