--- a/ts_exercises.ipynb
+++ b/ts_exercises.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c66fc6f1",
+   "id": "30db3fdf",
    "metadata": {},
    "source": [
     "# Working With Time Series Data Exercises\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b1ae42dc",
+   "id": "68b33761",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3adf253f",
+   "id": "207ac4d0",
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e4c820d",
+   "id": "74459607",
    "metadata": {},
    "source": [
     "The date column is already in datetime format so I don't need to convert anything. Just need to set the date as the index."
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "944cb613",
+   "id": "28a1213d",
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "e08c968c",
+   "id": "4ec75d22",
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "25c7e6f4",
+   "id": "fec9d610",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a47ff30",
+   "id": "6c836630",
    "metadata": {},
    "source": [
     "### 2. Write the code necessary to visualize the minimum temperature over time."
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "aef9df16",
+   "id": "ab58d619",
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c67c65b",
+   "id": "1547ded6",
    "metadata": {},
    "source": [
     "### 3. Write the code necessary to visualize the maximum temperature over time."
@@ -455,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "5e0fda6b",
+   "id": "22107ca9",
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d25bddb3",
+   "id": "33e7b2e3",
    "metadata": {},
    "source": [
     "### 4. Which month is the coldest, on average?"
@@ -497,7 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "ec0c628e",
+   "id": "8c7893fa",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aad6bf87",
+   "id": "60ef1c41",
    "metadata": {},
    "source": [
     "January is the coldest month, on average.\n",
@@ -530,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "dcacd574",
+   "id": "c0e0d9cb",
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14c9cb03",
+   "id": "8684beca",
    "metadata": {},
    "source": [
     "September is the hottest month, on average.\n",
@@ -563,7 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "38a5763f",
+   "id": "a38959d4",
    "metadata": {},
    "outputs": [
     {
@@ -584,13 +584,13 @@
     "d_temp_var['variation'] = d_temp_var.temp['max'] - d_temp_var.temp['min']\n",
     "# view date with greatest temp variability\n",
     "d_temp_var.variation.idxmax()\n",
-    "# view month with greatest temp variability\n",
+    "# view month with greatest total temp variability (sum of all days' variability)\n",
     "d_temp_var.resample('M').sum().variation.idxmax()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b8fdaedc",
+   "id": "2e3b07e3",
    "metadata": {},
    "source": [
     "July has the highest total daily temperature variability, but the date with the highest temperature variability is August 31.\n",
@@ -601,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "7287a8d4",
+   "id": "56173e49",
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "361efeca",
+   "id": "c538f92a",
    "metadata": {},
    "source": [
     "---\n",
@@ -651,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "7c390c6b",
+   "id": "585e1bdb",
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +819,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "c371c4f0",
+   "id": "fa01a65c",
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "c8866941",
+   "id": "43cadf58",
    "metadata": {},
    "outputs": [
     {
@@ -957,32 +957,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "id": "32384631",
+   "execution_count": 158,
+   "id": "563719b4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Timestamp('2015-03-31 00:00:00', freq='M')"
+       "Timestamp('2015-12-31 00:00:00', freq='M')"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# see which month/year had highest precipitation\n",
-    "seattle_weather.resample('M').max().precipitation.idxmax()"
+    "seattle_weather.resample('M').sum().precipitation.idxmax()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "775a940b",
+   "id": "b915afd9",
    "metadata": {},
    "source": [
-    "March 2015 had the highest amount of precipitation.\n",
+    "December 2015 had the highest amount of precipitation.\n",
     "\n",
     "### 2. Visualize the amount of monthly precipitation over time."
    ]
@@ -990,7 +990,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "78496dae",
+   "id": "ad0d6a9b",
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +1022,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "710413be",
+   "id": "75f863f0",
    "metadata": {},
    "source": [
     "### 3. Visualize the amount of wind over time. Choose a time interval you think is appropriate."
@@ -1031,7 +1031,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "5c998f9a",
+   "id": "cac2819d",
    "metadata": {},
    "outputs": [
     {
@@ -1063,7 +1063,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce1f7eaa",
+   "id": "4a35ef0c",
    "metadata": {},
    "source": [
     "### 4. Which year-month combination is the windiest?"
@@ -1072,7 +1072,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "f9694518",
+   "id": "582f5ac4",
    "metadata": {},
    "outputs": [
     {
@@ -1092,7 +1092,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6129415d",
+   "id": "4a14c399",
    "metadata": {},
    "source": [
     "February 2014 is the windiest.\n",
@@ -1103,7 +1103,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "fa74d8ae",
+   "id": "a818492b",
    "metadata": {},
    "outputs": [
     {
@@ -1126,7 +1126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f28864ac",
+   "id": "81946e04",
    "metadata": {},
    "source": [
     "2014 was the sunniest year.\n",
@@ -1136,17 +1136,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "id": "5b05650f",
+   "execution_count": 159,
+   "id": "a607f197",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'February'"
+       "'November'"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1155,15 +1155,17 @@
     "# create column of months\n",
     "seattle_weather['month'] = seattle_weather.index.month_name()\n",
     "# show month with most rainy days\n",
-    "seattle_weather[seattle_weather.weather == 'rain'].groupby('month').weather.count().idxmax()"
+    "seattle_weather[seattle_weather.weather == 'rain'].groupby('month').weather.count().idxmax()\n",
+    "# show month with greatest precipitation\n",
+    "seattle_weather.groupby('month').precipitation.sum().idxmax()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d407272c",
+   "id": "ea7b7b7e",
    "metadata": {},
    "source": [
-    "February has the most rainy days.\n",
+    "February has the most rainy days, but November has the greatest amount of precipitation.\n",
     "\n",
     "### 7. Which month has the most number of days with a non-zero amount of precipitation?"
    ]
@@ -1171,7 +1173,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "fe29236c",
+   "id": "d51109dc",
    "metadata": {},
    "outputs": [
     {
@@ -1191,7 +1193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "deef53f6",
+   "id": "bedb1927",
    "metadata": {},
    "source": [
     "December has the most days with a non-zero amount of precipitation."
@@ -1199,7 +1201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4635943",
+   "id": "e3274402",
    "metadata": {},
    "source": [
     "---\n",
@@ -1211,7 +1213,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "a0ba0c16",
+   "id": "147adb67",
    "metadata": {},
    "outputs": [
     {
@@ -1367,7 +1369,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "e4e42932",
+   "id": "7330e655",
    "metadata": {},
    "outputs": [
     {
@@ -1397,7 +1399,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "967abbd4",
+   "id": "884fdd82",
    "metadata": {},
    "outputs": [
     {
@@ -1498,7 +1500,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "b5406e47",
+   "id": "63b96132",
    "metadata": {},
    "outputs": [
     {
@@ -1592,13 +1594,14 @@
    ],
    "source": [
     "# replace negative delays with 0\n",
+    "import numpy as np\n",
     "flights.delay = np.where(flights.delay < 0, 0, flights.delay)\n",
     "flights.head()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2d3a2b77",
+   "id": "9d33d6e2",
    "metadata": {},
    "source": [
     "### 2. Which hour of the day has the highest average delay?"
@@ -1607,7 +1610,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "3706dd57",
+   "id": "7bda5a6c",
    "metadata": {},
    "outputs": [
     {
@@ -1641,7 +1644,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4753834a",
+   "id": "46514607",
    "metadata": {},
    "source": [
     "3AM has the highest average delay.\n",
@@ -1652,7 +1655,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "6e56d28c",
+   "id": "d5f7bd7b",
    "metadata": {},
    "outputs": [
     {
@@ -1677,7 +1680,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7dbfdc3a",
+   "id": "47974271",
    "metadata": {},
    "source": [
     "### 4. Does the month make a difference in the delay amount?"
@@ -1686,7 +1689,7 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "fb502e15",
+   "id": "39a8ec5c",
    "metadata": {},
    "outputs": [
     {
@@ -1724,7 +1727,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65cfda08",
+   "id": "4489b6b8",
    "metadata": {},
    "outputs": [],
    "source": []
